--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     const DEFAULT_ZOOM = 13;
 
     // Apps Script の WebアプリURL（〜/exec）
-    const APPS_SCRIPT_URL = "https://script.google.com/macros/s/____ここにあなたのexec URL____/exec";
+    const APPS_SCRIPT_URL = "https://script.google.com/macros/s/AKfycbxUVDUuB1Eac9CDzbAghUgJlCVvbhTmI6j_r3f-6R-pdtb1WYhU4mE4ImVJ3nvzHSBd/exec";
 
     const USE_APPS_SCRIPT = !!APPS_SCRIPT_URL;
 
@@ -465,3 +465,4 @@
   </script>
 </body>
 </html>
+
